# emp-ot

./: .travis.yml  CMakeLists.txt  install_relic.sh
cmake/: emp-ot-config.cmake
emp-ot/: co.h  deltaot.h  emp-ot.h  ideal.h  lattice.h  mextension_alsz.h  mextension_kos.h  miracl_np_ot.cpp  miracl_np_ot.h  miracl_np_ot.h__  miracl_np_ot.hpp__  np.h  ot.h  ot_extension.h  shextension.h
test/: deltaot.cpp  ideal.cpp  lattice.cpp  mot.cpp  print_precomputation_table.cpp  shot.cpp  test.h
